--- a/package.json
+++ b/package.json
@@ -10,6 +10,10 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "pg": "^7.8.0"
+    "express": "^4.16.4",
+    "html-template-tag": "^2.0.0",
+    "nodemon": "^1.18.9",
+    "pg": "^7.8.0",
+    "sql-template-strings": "^2.2.2"
   }
 }
